--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+wordnet/data/ngrams/top_14377_words.csv filter=lfs diff=lfs merge=lfs -text
+wordnet/data/ngrams/top_49887_words.csv filter=lfs diff=lfs merge=lfs -text
